<resources>
    <string name="app_name">Help Master</string>
    <string name="title_home_activity">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="character_case">0123456789 qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM йцукенгшщзхъфывапролджэёячсмитьбюЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЁЯЧСМИТЬБЮ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="e_t_name">имя</string>
    <string name="e_t_sername">фамилия</string>
    <string name="e_t_phone">телефон</string>
    <string name="e_t_e_mail">E-mail</string>
    <string name="e_t_password">пароль</string>
    <string name="e_t_confirm_password">повторите пароль</string>
    <string name="btn_registration">регистрация</string>
    <string name="btn_sign_in">вход</string>
    <string name="btn_add">добавить</string>
    <string name="btn_update">обновить</string>
    <string name="database_name">help_master.db</string>
    <string name="table_name">event_items</string>
    <string name="create_table_event_items">CREATE TABLE IF NOT EXISTS event_items (_id INTEGER PRIMARY KEY AUTOINCREMENT, date TEXT NOT NULL,  consumer TEXT NOT NULL,  staff TEXT NOT NULL,  service TEXT NOT NULL,  idService INTEGER NOT NULL,  discount INTEGER DEFAULT 0,  phoneConsumer TEXT NOT NULL,  cost INTEGER NOT NULL,  status BOOL DEFAULT false,  primeCost REAL NOT NULL);</string>
    <string name="drop_table">"DROP TABLE IF EXISTS event_items;"</string>
    <string name="date">date</string>
    <string name="consumer">consumer</string>
    <string name="staff">staff</string>
    <string name="service">service</string>
    <string name="id_service">idService</string>
    <string name="discount">discount</string>
    <string name="phone_consumer">phoneConsumer</string>
    <string name="cost">cost</string>
    <string name="status">status</string>
    <string name="prime_cost">primeCost</string>
    <string name="msg_notif_add">добавлено</string>
    <string name="msg_notif_delete">удалено</string>
    <string name="msg_notif_change">изменено</string>
    <string name="nav_events">События</string>
    <string name="nav_services">Услуги</string>
    <string name="nav_consumers">Посетители</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_about">О нас</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_employees">Сотрудник</string>
    <string name="vl_discount">0</string>
    <string name="msg_no_correct_fields">Проверте поля и попробуйто еще раз</string>
    <string-array name="position_list">
        <item>должность</item>
        <item>массажист</item>
        <item>косметолог</item>
        <item>гидромассажист</item>
    </string-array>
    <string-array name="Months">
        <item>месяц</item>
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
    <string name="consumer_dialog_default_img_path">"/drawable/item"</string>
    <string name="consumer_dialog_default_balance">0.0</string>
    <string name="consumer_dialog_default_discount">0</string>
    <string name="consumer_dialog_default_description">"don\'t have information"</string>
    <string name="alignment">alignment</string>
    <string name="direction">direction</string>
    <string name="consumer_balance">баланс</string>
    <string name="dialog_consumer_hint_name">Имя</string>
    <string name="dialog_consumer_hint_surname">Фамилия</string>
    <string name="dialog_consumer_hint_discount">скидка</string>
    <string name="dialog_consumer_hint_description">коментарии</string>
    <string name="id_dialog_service_btn_add">Добавить</string>
    <string name="btn_fragment_employee_set_change">изменить</string>
    <string name="nav_salary">Зарплата</string>
    <string name="dialog_hint_phone_number">+380 телефон</string>
    <string name="staff_name">сотрудник</string>
    <string name="select_app_for_call">выберите:</string>
    <string name="str_name_autor">Шевалье Владимир</string>
    <string name="branch_users">users</string>
    <string name="branch_consumers">consumers</string>
    <string name="branch_services">services</string>
    <string name="subbranch_events">events</string>
    <string name="subbranch_personal_data">personal data</string>
    <string name="tg_btn_add_event">добавить:</string>
    <string name="unsupport_call_consumer">"Извините в базе нет ном. телефона :-("</string>
    <string name="tel">tel:</string>
    <string name="tg_btn_add_consumer">добавить</string>
    <string name="employee_action_adress">com.android.camera.action.CROP</string>
    <string name="pref_def_img_path">"android.resource://chevalier.vladimir.gmail.com.helpmaster/"</string>
    <string name="no_data">"???"</string>
    <string name="uncorredt_file_path">"упс, проверте корректность данных!!!"</string>
    <string name="fb_storage_pref">images</string>
    <string name="fb_storage_suf">jpg</string>
    <string name="tg_btn_add_service">добавить</string>
    <string name="tg_exist_event">сущ. событие:</string>
    <string name="msg_no_connection">"упс, нет доступа к интернет \n проверте подключение"</string>
    <string name="msg_select_year_month">выберите год и месяц</string>
    <string name="file_setting_name"> "h_p_setting.json"</string>
    <string name="key_mail_current_user">"EMAIL_CURRENT_USER"</string>
    <string name="key_name_current_user">"NAME_CURRENT_USER"</string>
    <string name="key_surname_current_user">"SURNAME_CURRENT_USER"</string>
    <string name="key_phone_current_user">"PHONE_CURRENT_USER"</string>
    <string name="rest">Перезагрузка!!!</string>
    <string name="tv_row_event_date">дата:</string>
    <string name="event_service">услуга</string>
    <string name="tv_row_event_consumer">"клиент "</string>
    <string name="tv_d_new_event_time">время:</string>
    <string name="e_t_d_new_event_name_hint">имя клиента</string>
    <string name="tv_discount">скидка:</string>
    <string name="tv_service_item_name">"наименование: "</string>
    <string name="et_service_duration">продолжительность</string>
    <string name="et_service_cost">цена</string>
    <string name="et_service_f_cost">сибестоимость</string>
    <string name="hint_description">коментарии</string>
    <string name="msg_progress_bar">выполняется обновление данных...</string>
    <string name="year">год</string>
    <string name="month">месяц</string>
    <string name="user_name">имя</string>
    <string name="user_surname">фамилия</string>
    <string name="user_phone">телефон</string>
    <string name="user_mail">e-mail</string>
    <string name="user_password">пароль</string>
    <string name="sort_events">сортировка событий</string>
    <string name="type_of_storage">тип храниения</string>
    <string name="notification_mode">присылать уведомления</string>
    <string name="title_setting">Настройки:</string>
    <string name="title_show">Отображение событий:</string>
    <string name="item_week"> тек. неделя</string>
    <string name="item_month">тек. месяц</string>
    <string name="item_all">всё</string>
    <string name="txt_btn_save">сохранить</string>
</resources>