<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_nav_events"
            android:icon="@drawable/icon_tab_event"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/id_nav_services"
            android:icon="@drawable/icon_tab_service"
            android:title="@string/nav_services" />
        <item
            android:id="@+id/id_nav_consumers"
            android:icon="@drawable/icon_tab_consumer"
            android:title="@string/nav_consumers" />
        <item
            android:id="@+id/id_nav_employees"
            android:icon="@drawable/icon_tab_employee"
            android:title="@string/nav_employees" />
        <item
            android:id="@+id/id_nav_salary"
            android:icon="@drawable/icon_tab_salary"
            android:title="@string/nav_salary" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/id_nav_settings"

                android:icon="@drawable/icon_tab_setting"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/id_nav_info"
                android:icon="@drawable/icon_tab_info"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
