<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_new_staff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:columnCount="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/id_dialog_consumer_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginBottom="-10dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginRight="-10dp"
            android:layout_marginTop="-10dp"
            android:layout_row="0"
            android:layout_rowSpan="2" />
        <!--android:background="@color/colorAccent"-->
        <!--app:srcCompat="@drawable/item"-->

        <EditText
            android:id="@+id/id_dialog_consumer_name"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:layout_row="0"
            android:gravity="center"
            android:hint="@string/dialog_consumer_hint_name"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/id_dialog_consumer_surname"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:layout_row="1"
            android:gravity="center"
            android:hint="@string/dialog_consumer_hint_surname"
            android:inputType="textCapSentences" />

    </GridLayout>

    <EditText
        android:id="@+id/id_dialog_consumer_phone_number"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:hint="@string/dialog_hint_phone_number"
        android:inputType="phone"
        android:lines="1"
        android:maxLength="13" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/id_dialog_consumer_balance"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:hint="@string/consumer_balance"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/id_dialog_consumer_discount"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:hint="@string/dialog_consumer_hint_discount"
            android:inputType="number" />
    </LinearLayout>

    <EditText
        android:id="@+id/id_dialog_consumer_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:hint="@string/dialog_consumer_hint_description"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="3" />

    <Button
        android:id="@+id/id_dialog_consumer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp" />


</LinearLayout>